
Package: R.devices
==================

Version: 2.7.0 [2013-09-25]
o GENERALIZATION: Vectorized devEval(), e.g. it is now possible to
  do devEval(c("png", "pdf"), name="MyPlot", { plot(1:10) }).
o GENERALIZATION: Vectorized devIsInteractive(), devIsOpen(), 
  devGetLabel(), devOff() and devDone().
o Now devOff() and devDone() checks if device is opened before trying
  to close it.  This avoids opening and closing of non-opened devices.
o Updated the formal defaults of several devEval() arguments to be
  NULL.  Instead, NULL for such arguments are translated to default
  internally.  This was necessary in order to vectorize devEval().
o CONSISTENCY: Now devList() returns an empty integer vector
  (instead of NULL) if no open devices exists.
o ROBUSTNESS: The device functions that are not vectorize do now
  throw an informative error if passed a vector.
o ROBUSTNESS: Added several more package system tests.
o ROBUSTNESS: Now declaring all S3 method in NAMESPACE.
o CLEANUP: Removed fallback attachments of 'R.utils' as these
  are no longer needed with R.oo (>= 1.15.1).


Version: 2.6.1 [2013-09-17]
o ROBUSTNESS: Now getDataURI() throws an Exception is suggested
  package 'base64enc' is not installed.
o BUG FIX: Some package examples and system tests assumed that
  the suggested package 'base64enc' is installed.
o BUG FIX: Package vignette assumed that R.rsp and R.utils
  are attached.
o Bumped up package dependencies.


Version: 2.6.0 [2013-08-29]
o Added support for retrieving a Base64-encoded data URI string
  from a DevEvalFile.
o Added classes DevEvalProduct and DevEvalFileProduct, which are
  returned by devEval().
o ROBUSTNESS: Added package system tests.


Version: 2.5.2 [2013-08-27]
o Added devIsInteractive().
o CLEANUP: Package no longer utilizes ':::'.
o BUG FIX: Now devEval() no longer passes a pathname to devEval() for
  interactive devices, which in turn would generate warnings.


Version: 2.5.1 [2013-08-17]