@@ -16,3 +16,17 @@ for (type in types) {
   print(res)
   stopifnot(length(res) == length(unlist(strsplit(type, split=","))))
 }
+
+
+devEval(c("png", "jpg"), name="count", {
+  plot(1:10)
+  count <- count + 1L
+}, initially = {
+  # Emulate an overhead
+  cat("Initiate...")
+  count <- 0L
+  Sys.sleep(1)
+  cat("done\n")
+}, finally = {
+  cat("Number of image files created: ", count, "\n", sep="")
+})
